@@ -41,10 +41,9 @@ namespace SphereSim
 
     public:
         /** \brief Start a ServerBenchmark with the specified address and port.
-         * \param args The arguments that the program was invoked with.
          * \param addr The address that the socket will be connecting to.
          * \param port The port that the socket will be connecting to. */
-        ServerBenchmark(QStringList args, const char* addr, unsigned short port);
+        ServerBenchmark(const char* addr, unsigned short port);
 
         ~ServerBenchmark();
 
