@@ -53,10 +53,9 @@ namespace SphereSim
 
     public:
         /** \brief Start a ServerTester with the specified address and port.
-         * \param args The arguments that the program was invoked with.
          * \param addr The address that the socket will be connecting to.
          * \param port The port that the socket will be connecting to. */
-        ServerTester(QStringList args, const char* addr, unsigned short port);
+        ServerTester(const char* addr, unsigned short port);
 
         ~ServerTester();
 
