@@ -35,8 +35,8 @@ using namespace SphereSim;
 
 const int ServerTester::framebuffer = 255;
 
-ServerTester::ServerTester(QStringList args, const char* addr, unsigned short port)
-    :sender(new ActionSender(args, addr, port, this)), testCounter(0),
+ServerTester::ServerTester(const char* addr, unsigned short port)
+    :sender(new ActionSender(addr, port, this)), testCounter(0),
     successCounter(0), testSuccess(true), testActionName(), testResult(0),
     systemCreator(new SystemCreator(sender))
 {
