@@ -11,12 +11,11 @@
 
 #include <QHostAddress>
 #include <QTcpServer>
-#include <QStringList>
 #include <QCoreApplication>
 
 using namespace SphereSim;
 
-ActionServer::ActionServer(QStringList args, const char* addr, unsigned short port)
+ActionServer::ActionServer(const char* addr, unsigned short port)
     :server(new QTcpServer())
 {
     qDebug()<<"ActionServer: constructor called";
